JSR 292 JVMTI MethodEnter hook is not called for JSR 292 bootstrap and target methods

XMLWordPrintable

    • b02
    • generic
    • generic
    • Not verified

        JVMTI MethodEntry hook is:

        - not called for JSR 292 bootstrap method.
        - called only once for multiple JSR 292 target method invocations from the same CallSite

        Tested on JDK 7 b112 (hs20-b01).

        Please see comments for details.
        For b135: MethodEntry is not called for methods called using invokedynamic from compiled code (-Xcomp)

              Assignee:
              Tom Rodriguez
              Reporter:
              Kirill Shirokov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: