6990212: JSR 292 JVMTI MethodEnter hook is not called for JSR 292 bootstrap and target methods

Check for single stepping when dispatching invokes from method handles

Reviewed-by: coleenp, twisti, kvn, dsamersoff